[tool.poetry]
name = "yp-dl"
version = "0.9.19"
description = "Asynchronous scraper to download youtube community posts"
authors = ["Boltzmann Potato <boltzmannpotato@proton.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yp_dl"}]

[tool.poetry.dependencies]
python = "^3.11"
requests-html = "^0.10.0"
rich = "^13.6.0"
lxml = "^6.0.2"
lxml-html-clean = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yp-dl = "yp_dl.yp_dl:run"